--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,6 +3,9 @@
     <div class="allTo col-md-12 col-sm-12">
         <h2 class="wow bounceInRight" data-wow-delay="0.3s">#ESTOQUE NÁPOLES</h2>
     </div>
+    <div class="allTo login" *ngIf="logado">
+      <a class="link wow bounceInRight" data-wow-delay="0.6s"  routerLink="/login">sair</a>
+    </div>
   </div>
 </header>
 
