--- a/src/app/dashbord/customers-list/customers-list.component.html
+++ b/src/app/dashbord/customers-list/customers-list.component.html
@@ -1,6 +1,6 @@
 
 <app-header></app-header>
-<div class="container-fluid w-100">
+<div class="container-fluid w-100 margin-top-76px">
 
   <div class="d-flex justify-content-between m-3">
     <div>
@@ -27,13 +27,13 @@
     </div>
   </div>
 
-  <div class="alert alert-warning mr-3 ml-3" role="alert" *ngIf="customers.length === 0 && !hasError">
+  <div class="alert alert-warning mr-3 ml-3" role="alert" *ngIf="customers.length === 0 && hasError">
     Não encontramos nenhum cliente.
   </div>
-  <div class="alert alert-danger mr-3 ml-3" role="alert" *ngIf="hasError">
+  <!-- <div class="alert alert-danger mr-3 ml-3" role="alert" *ngIf="hasError">
     Não foi possível carregar algumas informações. Por favor,
     <div class="alert-link" (click)="ngOnInit()">tente novamente.</div>
-  </div>
+  </div> -->
   <div class="card mb-3 mr-3 ml-3" *ngIf="!hasError && customers.length !== 0">
     <div class="table-responsive">
 
